gcc/testsuite/rust/rustc/ui/fully-qualified-type/fully-qualified-type-name1.rs
// Test that we use fully-qualified type names in error messages.

fn main() {
    let x: Option<usize>;
    x = 5;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
}

